refactor(server.js) alterando caminhos para o servidor

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API de um estoque online",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./src/index.js"
+    "dev": "nodemon ./src/server.js"
   },
   "keywords": [],
   "author": "Guilherme Eduardo de Souza de Almeida",
