--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "API de um estoque online",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./src/server.js"
+    "dev": "nodemon ./src/server.js",
+    "start": "node .src/server.js"
   },
   "keywords": [],
   "author": "Guilherme Eduardo de Souza de Almeida",
