--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon ./src/server.js",
-    "start": "node .src/server.js"
+    "start": "node ./src/server.js"
   },
   "keywords": [],
   "author": "Guilherme Eduardo de Souza de Almeida",
